syntax = "proto3";
package clinic;

option java_package = "com.clinic.datalayer.grpc";
option java_multiple_files = true;


message Empty {}

message IdRequest {
  int64 id = 1;
}

message StatusResponse {
  bool success = 1;
  string message = 2;
}


message LoginRequest {
  string email = 1;
  string password = 2;
  string userType = 3; // PATIENT, DOCTOR, STAFF
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  int64 userId = 3;
  string userType = 4;
  string name = 5;
  string token = 6;
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
  string password = 4;
  string userType = 5; //PATIENT, DOCTOR, STAFF
  string specialization = 6; //For doctors only
  string role = 7; //For staff only
}


message PatientMessage {
  int64 patientId = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string password = 5;
}

message PatientListResponse {
  repeated PatientMessage patients = 1;
}


message DoctorMessage {
  int64 doctorId = 1;
  string name = 2;
  string specialization = 3;
  string email = 4;
  string password = 5;
}

message DoctorListResponse {
  repeated DoctorMessage doctors = 1;
}


message StaffMessage {
  int64 staffId = 1;
  string name = 2;
  string email = 3;
  string role = 4;
  string password = 5;
}

message StaffListResponse {
  repeated StaffMessage staffList = 1;
}


message AppointmentMessage {
  int64 appointmentId = 1;
  int64 patientId = 2;
  int64 doctorId = 3;
  int64 slotId = 4;
  string date = 5;
  string startTime = 6;
  string endTime = 7;
  string status = 8;
  string type = 9;
  int64 staffId = 10;
  string cancellationReason = 11;

  string patientName = 12;
  string doctorName = 13;
  string doctorSpecialization = 14;
}

message AppointmentListResponse {
  repeated AppointmentMessage appointments = 1;
}

message BookAppointmentRequest {
  int64 patientId = 1;
  int64 doctorId = 2;
  int64 slotId = 3;
  string type = 4;
}

message CancelAppointmentRequest {
  int64 appointmentId = 1;
  string cancelledBy = 2; // PATIENT, DOCTOR
  string reason = 3;
}

message UpdateAppointmentStatusRequest {
  int64 appointmentId = 1;
  string status = 2;
  int64 staffId = 3;
}

message AppointmentFilterRequest {
  int64 patientId = 1;
  int64 doctorId = 2;
  int64 staffId = 3;
  string status = 4;
  string date = 5;
}


message AvailableSlotMessage {
  int64 slotId = 1;
  int64 doctorId = 2;
  string date = 3;
  string startTime = 4;
  string endTime = 5;
  string status = 6;
  int64 appointmentId = 7;

  string doctorName = 8;
  string doctorSpecialization = 9;
}

message AvailableSlotListResponse {
  repeated AvailableSlotMessage slots = 1;
}

message SlotFilterRequest {
  int64 doctorId = 1;
  string date = 2;
  string status = 3;
}

message CreateSlotsRequest {
  int64 doctorId = 1;
  string date = 2;
  repeated TimeSlot timeSlots = 3;
}

message TimeSlot {
  string startTime = 1;
  string endTime = 2;
}


message NotificationMessage {
  int64 notificationId = 1;
  int64 appointmentId = 2;
  int64 staffId = 3;
  int64 recipientId = 4;
  string recipientType = 5;
  string message = 6;
  string type = 7;
  string status = 8;
  string channel = 9;
  string createdAt = 10;
}

message NotificationListResponse {
  repeated NotificationMessage notifications = 1;
}

message SendNotificationRequest {
  int64 appointmentId = 1;
  int64 staffId = 2;
  int64 recipientId = 3;
  string recipientType = 4;
  string message = 5;
  string type = 6;
  string channel = 7;
}

message NotificationFilterRequest {
  int64 recipientId = 1;
  string recipientType = 2;
  string status = 3;
  string type = 4;
}


message ScheduleReportRequest {
  string startDate = 1;
  string endDate = 2;
  int64 doctorId = 3;
}

message ScheduleReportResponse {
  int32 totalAppointments = 1;
  int32 completedAppointments = 2;
  int32 cancelledAppointments = 3;
  int32 missedAppointments = 4;
  repeated DoctorScheduleSummary doctorSummaries = 5;
}

message DoctorScheduleSummary {
  int64 doctorId = 1;
  string doctorName = 2;
  int32 totalAppointments = 3;
  int32 availableSlots = 4;
}


service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (StatusResponse);
  rpc ValidateToken(IdRequest) returns (LoginResponse);
}

service PatientService {
  rpc CreatePatient(PatientMessage) returns (PatientMessage);
  rpc GetPatientById(IdRequest) returns (PatientMessage);
  rpc GetPatientByEmail(PatientMessage) returns (PatientMessage);
  rpc GetAllPatients(Empty) returns (PatientListResponse);
  rpc UpdatePatient(PatientMessage) returns (PatientMessage);
  rpc DeletePatient(IdRequest) returns (StatusResponse);
}

service DoctorService {
  rpc CreateDoctor(DoctorMessage) returns (DoctorMessage);
  rpc GetDoctorById(IdRequest) returns (DoctorMessage);
  rpc GetDoctorsBySpecialization(DoctorMessage) returns (DoctorListResponse);
  rpc GetAllDoctors(Empty) returns (DoctorListResponse);
  rpc UpdateDoctor(DoctorMessage) returns (DoctorMessage);
  rpc DeleteDoctor(IdRequest) returns (StatusResponse);
}

service StaffService {
  rpc CreateStaff(StaffMessage) returns (StaffMessage);
  rpc GetStaffById(IdRequest) returns (StaffMessage);
  rpc GetAllStaff(Empty) returns (StaffListResponse);
  rpc UpdateStaff(StaffMessage) returns (StaffMessage);
  rpc DeleteStaff(IdRequest) returns (StatusResponse);
}

service AppointmentService {
  rpc BookAppointment(BookAppointmentRequest) returns (AppointmentMessage);
  rpc GetAppointmentById(IdRequest) returns (AppointmentMessage);
  rpc GetAllAppointments(Empty) returns (AppointmentListResponse);
  rpc GetAppointmentsByFilter(AppointmentFilterRequest) returns (AppointmentListResponse);
  rpc GetPatientAppointments(IdRequest) returns (AppointmentListResponse);
  rpc GetDoctorAppointments(IdRequest) returns (AppointmentListResponse);
  rpc GetDoctorDailySchedule(AppointmentFilterRequest) returns (AppointmentListResponse);
  rpc CancelAppointment(CancelAppointmentRequest) returns (AppointmentMessage);
  rpc UpdateAppointmentStatus(UpdateAppointmentStatusRequest) returns (AppointmentMessage);
  rpc UpdateAppointment(AppointmentMessage) returns (AppointmentMessage);
  rpc ReassignAppointment(AppointmentMessage) returns (AppointmentMessage);
  rpc GetPendingCancellations(Empty) returns (AppointmentListResponse);
  rpc DeleteAppointment(IdRequest) returns (StatusResponse);
}

service AvailableSlotService {
  rpc CreateSlot(AvailableSlotMessage) returns (AvailableSlotMessage);
  rpc CreateMultipleSlots(CreateSlotsRequest) returns (AvailableSlotListResponse);
  rpc GetSlotById(IdRequest) returns (AvailableSlotMessage);
  rpc GetAllSlots(Empty) returns (AvailableSlotListResponse);
  rpc GetSlotsByFilter(SlotFilterRequest) returns (AvailableSlotListResponse);
  rpc GetAvailableSlots(SlotFilterRequest) returns (AvailableSlotListResponse);
  rpc GetDoctorSlots(IdRequest) returns (AvailableSlotListResponse);
  rpc UpdateSlot(AvailableSlotMessage) returns (AvailableSlotMessage);
  rpc DeleteSlot(IdRequest) returns (StatusResponse);
}

service NotificationService {
  rpc SendNotification(SendNotificationRequest) returns (NotificationMessage);
  rpc GetNotificationById(IdRequest) returns (NotificationMessage);
  rpc GetAllNotifications(Empty) returns (NotificationListResponse);
  rpc GetNotificationsByFilter(NotificationFilterRequest) returns (NotificationListResponse);
  rpc GetUserNotifications(NotificationFilterRequest) returns (NotificationListResponse);
  rpc MarkNotificationAsRead(IdRequest) returns (NotificationMessage);
  rpc DeleteNotification(IdRequest) returns (StatusResponse);
}

service ReportService {
  rpc GenerateScheduleReport(ScheduleReportRequest) returns (ScheduleReportResponse);
}
